# pik-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  metadata.yml  pyproject.toml
.github/workflows/: test.yml
deploy/: backup.sh  install.sh  nginx-pik.gorev.space-http.conf  nginx-pik.gorev.space.conf  pik-backup.service  pik-backup.timer  pik-scan-dev.service  pik-scan-dev.timer  pik-scan.service  pik-scan.timer  pik.service
docs/: refactor-de-pik-plan.md
docs/superpowers/plans/: 2026-05-15-pik-narvin-parser-plan.md
docs/superpowers/specs/: 2026-05-15-pik-narvin-parser-design.md
pik/: __init__.py  aggregated.py  backfill_wayback.py  blocks_meta.py  client.py  developers.py  geo.py  mapping.py  merge.py  quality.py  schema.sql  store.py  velocity.py
pik/sources/: __init__.py  a101.py  absolut.py  base.py  brusnika.py  donstroy.py  fsk.py  granel.py  ingrad.py  level.py  mrgroup.py  pik.py
static/: flat.html  index.html
tests/: conftest.py  test_backfill.py  test_client.py  test_developers.py  test_geo.py  test_mapping.py  test_quality.py  test_scan.py  test_scan_dev.py  test_scan_write_model.py  test_sources.py  test_sprint1_fixes.py  test_sprint2_fixes.py  test_store.py  test_velocity.py
tests/fixtures/: a101_flats.json  absolut_flats.json  donstroy_flats.json  fsk_flat.json  level_flats.json  mrgroup_citybay.html  sample_flat.json
