[project]
name = "pik-narvin-parser"
version = "0.1.0"
description = "Daily price snapshots for PIK Narvin 1-bedroom flats"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
]

[project.optional-dependencies]
serve = ["datasette>=0.65,<1.0"]
test = ["pytest>=8.0", "responses>=0.25"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pik"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
