[project]
name = "pik-parser"
version = "0.1.0"
description = "Daily price snapshots for any PIK residential complex (defaults to Narvin)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Dmitrii Gorev", email = "dmitrii@gorev.space"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/gorevds/pik-parser"
"Live dashboard" = "https://pik.gorev.space"

[project.optional-dependencies]
serve = ["datasette>=0.65,<1.0"]
test = ["pytest>=8.0", "responses>=0.25"]
dev = ["pytest>=8.0", "responses>=0.25", "ruff>=0.6", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pik"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Ruff: быстрый линтер + форматтер. Только то, что регулярно ловит реальные
# баги, без воинствующего стиля — наш код в большинстве своём уже close to
# ruff defaults. select = E (errors), F (pyflakes), W (warnings), I (isort).
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", "pik_narvin_parser.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # long lines — есть в комментариях с примерами URL/JSON
    "E731",  # lambda assignment — иногда читабельнее def
    "E701",  # multiple statements on one line — `if x: return None` гайды лаконичны
    "B008",  # function call as default — нам не страшно
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E712", "B011", "E402"]  # assert ==, assert False, late-bound imports
"bin/*" = ["E402"]                      # imports после env-setup

# Mypy: строгий по nullables, мягкий по untyped-imports (datasette нет stubs).
[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["venv/", "pik_narvin_parser\\.egg-info/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
